--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		<link rel="shortcut icon" href="static/images/favicon.ico">
 	</head>
 	<body>
+		<a href="https://github.com/Olvi73/lol"><img alt="GitHub Repo stars" src="https://img.shields.io/github/stars/Olvi73/lol?logo=github&style=for-the-badge"></a>
 		<div id="app">
 			<div class="content">
 				<div class="filter">
